# shiayongshen.github.io

./: .dockerignore  .gitignore  Dockerfile  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  conference-acm-en.html  conference-acm.html  conference-kdd2025-en.html  conference-kdd2025.html  conference-tosem-en.html  conference-tosem.html  docker-compose.yml  index-en.html  index.html  pyproject.toml  research-en.html  research.html  robots.txt  sitemap.xml
backend/: .env.example  DOCKERFILE  Dockerfile  skill.md
backend/app/: assistant.py  auth.py  config.py  content.py  database.py  main.py  models.py  schemas.py  seed.py
content/posts/: fastapi-react-personal-site-architecture.md  how-this-site-is-built.md  welcome-to-my-digital-garden.md
css/: common.css
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/components/: AskVincentPanel.tsx  GuestbookEditor.tsx  Layout.tsx  MarkdownCard.tsx  PostEditor.tsx  ProfileEditor.tsx  Seo.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: AboutPage.tsx  AdminAssistantPage.tsx  AdminDashboard.tsx  AdminPromptRunnerPage.tsx  AdminPromptsPage.tsx  BlogEditorPage.tsx  BlogPage.tsx  GuestbookPage.tsx  LoginPage.tsx  PostPage.tsx
frontend/src/styles/: global.css
js/: common.js
